--- a/index.html
+++ b/index.html
@@ -41,12 +41,13 @@
 
             <div class="strength-container">
                 <p>Strength</p>
-                <div indicator></div>
+                <div data-indicator></div>
             </div>
             <button class="generate-btn">
                 Generate Password
             </button>
         </div>
     </div>
+    <script src="index.js"></script>
 </body>
 </html>
