--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         <h1>Password Generator</h1>
         <div class="display-container">
             <input readonly placeholder="Password" type="text" data-passwordDisplay>
-            <button>
+            <button data-copy>
                 <span copymsg></span>
                 <img src="copy-icon.png" alt="">
             </button>
